Completed week 16 homework

--- a/index.html
+++ b/index.html
@@ -7,38 +7,55 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/d3Style.css">
-
+  
 </head>
 
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-md-12">
-        <h1>D3Times</h1>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-12  col-md-9">
-        <div id="scatter">
-          <!-- We append our chart here. -->
+      <div class="col-md-10 jumbotron justify-content-center">
+        <div class="row">
+          <div class="col-5 text-right" >
+            <img src="Images/newspaper.svg" class="head-img">
+          </div>
+          <div class="col-5" id="newspaper">
+            <h1>D3 Times</h1>
+            <h5>Hard hitting D3 Journalism</h5>
+          </div>
         </div>
+        
+      </div>
+    </div>
+    <div class = "row">
+      <div class="col-12">
+        <div id="controls" class="text-center">
+          <label for="scale-select"><strong>Colour Scale: &nbsp;</strong></label>
+          <select id="scale-select">
+              <option value="poverty">Poverty</option>
+              <option value="age">Age</option>
+              <option value="income" selected="selected">Income</option>
+              <option value="healthcare">Lacking Healthcare</option>
+              <option value="smokes">Smokes</option>
+              <option value="obesity">Obesity</option>
+          </select>
+      </div>
       </div>
     </div>
     <div class="row">
       <div class="col-xs-12  col-md-9">
-        <div class="article">
+          <div id="scatter"></div>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-xs-12  col-md-9 align-items-center">
+        <div class="article ">
           <h2>Correlations Discovered Between Health Risks and Age, Income</h2>
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <p>Recent data from the <a href="https://data.census.gov/cedsci/">U.S. Census Bureau</a> and the Behavioral Risk Factor Surveillance System has revealed the many factors that contribute to our health and quality of life. The interactive data visualisation above utilises the 2014 dataset and shows just some of the the many interesting correlations seen in the data.</p>
 
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <p>States with higher rates of poverty, also had higher rates of health issues like obesity and were more liekly to be smokers. States with a lower median household income displayed a similar rates of smoking and obesity. Other factors, like median age, appeared to be less correlated with such outcomes.</p>
+            
+          <p>To investigate the data further the chart above can be manipulated by clicking on the axis-labels to see how the variables are correlated with one another. The colour scale for the visualisation can also be changed via the drop down menu at the top to add a third dimension to the data. Hover your mouse over each state to see the individual data. For more on US census data visist the <a href="https://data.census.gov/cedsci/">United States Census Bureau.</a></p>
 
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
         </div>
       </div>
     </div>
@@ -50,10 +67,11 @@
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script type="text/javascript" src="assets/js/app.js"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
 </body>
 
 </html>
